--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: phpapp-service
+  name: htmlapp-service
   labels:
-    app: phpapp-service
+    app: htmlapp-service
 spec:
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 80
-    name: phpapp-port
+    name: htmlapp-port
   selector:
-    app: phpapp
+    app: htmlapp
